2003-02-22  Steven Bosscher  <s.bosscher@student.tudelft.nl>

PR c/8828
	* jump.c (never_reached_warning): Don't fall through BARRRIER
	insns.  Update comments to reflect what the function really does.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@63275 138bc75d-0d04-0410-961f-82ee72b054a4